test/corpus/L1/negative/radix-digit-invalid.st
"---
id: radix-digit-invalid
kind: negative
phase: lex
layer: L1
spec: anexoA:error.radix-digit
origin: spec-ANSI
section: error.radix-digit
codes: E_RADIX_DIGIT
---"
2r2
